--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <!-- left column -->
         <div class="col-l">
 
-
-            <video onmouseover="reproducirVideo(this)" class="mi-video" onmouseout="pausarVideo(this)">
+            <video onmouseover="reproducirVideo(this)" class="mi-video" onmouseout="pausarVideo(this)" muted loop>
                 <source src="https://videos.pexels.com/video-files/20233414/20233414-hd_1366_720_30fps.mp4" type="video/mp4">
             </video>
 
